--- a/index.html
+++ b/index.html
@@ -4,14 +4,46 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <script>
+            (function(d) {
+              var config = {
+                kitId: 'zgj7ezg',
+                scriptTimeout: 3000,
+                async: true
+              },
+              h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+            })(document);
+        </script>
+
         <link rel="stylesheet" href="style.css">
-    
+        
         <title>ETHAN KONG DESIGN</title>
     </head>
 
     <body>
+        <div id="navicon">EK</div>
+        <nav>            
+            <a href="/index.html">WORK</a>
+            <a href="/about.html">ABOUT</a>
+            <a href="/contact.html">CONTACT</a>
+        </nav>
+
         <h1>
             WELCOME!
         </h1>
+        <p>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+            standard paragraph 字體 style<br>
+        </p>
     </body>
 </html>
