--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
         </script>
 
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="/img/favicon.png">
         
         <title>ETHAN KONG DESIGN</title>
     </head>
+
+    <svg style="display: none;">
+        <symbol id="circle" class="category" width="10" height="10" viewBox="0 0 10 10">
+            <circle cx="5" cy="5" r="4.5" />
+        </symbol>
+    </svg>
 
     <body>
         <div id="navicon">EK</div>
@@ -28,22 +35,27 @@
             <a href="/contact.html">CONTACT</a>
         </nav>
 
-        <h1>
-            WELCOME!
-        </h1>
-        <p>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-            standard paragraph 字體 style<br>
-        </p>
+        <div class="split left">
+
+        </div>
+
+        <div class="split right">
+            <h1>
+                WELCOME!
+            </h1>
+            <div class="indexblock-top">
+                <p>2024.10.13</p>
+                <h3>functional zone of spatial planning in turmoil</h3>
+            </div>
+            <!-- <hr class="indexblock"> -->
+            <div class="indexblock-bottom">
+                <div class="indexblock-category">
+                    <p><svg class="category"><use href="#circle"></use></svg>Data Visualization</p>
+                    <p><svg class="category"><use href="#circle"></use></svg>Map Design</p>
+                </div>
+                <p>國土計畫難逃開發邏輯？各縣市爭議何在？地圖全解析</p>
+            </div>
+        </div>
+
     </body>
 </html>
