--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         </script>
 
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="/img/favicon.png">
+        <link rel="icon" type="image/png" href="/assets/favicon.png">
         
         <title>ETHAN KONG DESIGN</title>
+
+        <script src="csvtransfer.js" defer></script>
     </head>
 
     <svg style="display: none;">
@@ -27,14 +29,18 @@
         </symbol>
     </svg>
 
-    <body>
+    <!-- navigation bar -->
+    <body> 
         <div id="navicon">EK</div>
         <nav>            
             <a href="/index.html">WORK</a>
             <a href="/about.html">ABOUT</a>
             <a href="/contact.html">CONTACT</a>
         </nav>
+    </body>
 
+    <!-- custom project list -->
+    <body> 
         <div class="split left">
 
         </div>
@@ -56,6 +62,11 @@
                 <p>國土計畫難逃開發邏輯？各縣市爭議何在？地圖全解析</p>
             </div>
         </div>
-
     </body>
+
+    <!-- csv transfer into table -->
+    <!-- <body> 
+        <input type="file" id="csvFile" accept="/assets/ProjectList.csv" />
+        <table id="csvTable" border="1"></table>
+    </body> -->
 </html>
